--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
           frameborder="0"
           marginheight="0"
           marginwidth="0"
+              overflow-y="hidden"
+              scrolling="no"
           class="doc"
           >Loading…</iframe
         >
