--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
     <!--navigation ends-->
     <!--main-->
+    <div class="spacer" />
     <div class="form">
       <iframe
           src="https://docs.google.com/forms/d/e/1FAIpQLSccqc7bu1aYMKZWeV2PrtpwONlhKBKyQjTjaZPqilrbVrTJog/viewform?embedded=true"
