--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     </div>
     <div class="donation">
-    <a href="https://nextlevelredmond.com/enroll/" class="button-1">Donate To Our Fund</a>
+    <a href="gf.me/u/x27wbq" class="button-1">Donate To Our Fund</a>
   </div>
     <!--content ends-->
     <div class="footer">
